[gd_scene load_steps=9 format=3 uid="uid://vxcygoik8f5j"]

[ext_resource type="Script" uid="uid://nnwut1q1dgfj" path="res://Scripts/Animal.gd" id="1_7v6jt"]
[ext_resource type="Texture2D" uid="uid://cy34q2sf575f6" path="res://assets/player/parrot.png" id="1_pbsnt"]
[ext_resource type="AudioStream" uid="uid://bva8bjj3c67jg" path="res://assets/audio/stretch2.ogg" id="3_edvrt"]
[ext_resource type="AudioStream" uid="uid://btjrqxundxyeq" path="res://assets/audio/catapult.ogg" id="4_hsrja"]
[ext_resource type="AudioStream" uid="uid://bpsxwy6rdp53j" path="res://assets/audio/kick_wood.ogg" id="5_00mlg"]
[ext_resource type="Texture2D" uid="uid://c0lu428rtunek" path="res://assets/items/arrow.png" id="6_hsrja"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_hsrja"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_7v6jt"]
radius = 19.0

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_hsrja")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_7v6jt")

[node name="StrechSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_edvrt")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hsrja")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_00mlg")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Animal" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_pbsnt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7v6jt")

[node name="Label" type="Label" parent="."]
offset_left = -23.0
offset_top = -91.0
offset_right = 24.0
offset_bottom = -68.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "aaaaa"

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_hsrja")
offset = Vector2(139.305, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_rigid_body_2d_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="screen_exited"]
